# Talentverse

./: README.md
01- talent code/TalentFairs_v6_1_Full/: README.md
01- talent code/TalentFairs_v6_2_GoLive_National/: README.md  REFERENCES.md
01- talent code/TalentFairs_v7_0_Parity_Pack/: README.md
01- talent code/TalentFairs_v7_1_Connectors_Pro/: README.md
01- talent code/TalentFairs_v7_2_1_Rollover_ISM_LTR/: README.md
01- talent code/TalentFairs_v7_2_National_Grid/: README.md
01- talent code/TalentFairs_v7_3_2_Aliasing_Interactions_Eval/: README.md
01- talent code/TalentFairs_v7_3_3_Shadow_Dashboard/: README.md
01- talent code/TalentFairs_v7_3_4_DualEval_AutoCutover/: README.md
01- talent code/TalentFairs_v7_3_Fusion_Engine/: README.md
01- talent code/TalentFairs_v8_0_GoLive_AWS/: README.md
01- talent code/TalentFairs_v8_1_SSM_R53_BlueGreen/: README.md
01- talent code/TalentFairs_v8_2_OIDC_Nafath_Grafana_CI/: README.md
01- talent code/talent-fairs 2/: .env.example  README.md
01- talent code/talent-fairs-delight-pack-v5/: README.md  apply_patch.sh
01- talent code/talent-fairs-deploy-addon-v4.0/: README_DEPLOY.md
01- talent code/talent-fairs-unified-v4.0/: .env.example  README.md  package.json
01- talent code/talent-fairs-v2.0-socialplus/: README.md  (+1 more)
01- talent code/talent-fairs-v2.0-socialplus 2/: .env.example  README.md
01- talent code/talentverse 11/services/ai-careerpath/: pyproject.toml
01- talent code/talentverse 3/services/ai-talentmatch/: pyproject.toml
01- talent code/talentverse 3/services/ai-talentmatch/src/: main.py
(+1182 files in other folders)
