
[project]
name = "talentverse-ai-careerpath"
version = "1.4.0"
dependencies = [
  "fastapi>=0.115.0","uvicorn>=0.30.0","pydantic>=2.7.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "opentelemetry-sdk>=1.24.0","opentelemetry-exporter-otlp>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0"
]
