
[project]
name = "talentverse-ai"
version = "1.0.0"
dependencies = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "pydantic>=2.7.0", "numpy>=1.26.0"]

[tool.pytest.ini_options]
addopts = "-q"

[project]
dependencies = ["transformers>=4.44.0","torch>=2.2.0","numpy>=1.26.0"]

[project]
dependencies = ["psycopg[binary]>=3.1.18","transformers>=4.44.0","torch>=2.2.0","numpy>=1.26.0"]
